name:                yesod-auth-bcryptdb
version:             0.3.0.1
synopsis:            Authentication plugin for Yesod.
description:
  This package provides authentication with passwords hashed and salted using
  bcrypt which are stored in a database, and works best in situations where an
  administrator is involved in setting up a user with an initial password.
  .
  The complete login process, including a default form, is implemented by
  this plugin, but the application developer must design the interfaces
  for setting up users and allowing them to change their own passwords,
  since only the low-level password-setting functions are provided by this
  package.  (Note that other authentication plugins may be more appropriate
  if you wish to use email verification to set up accounts).
homepage:            https://github.com/yusent/yesod-auth-bcryptdb
bug-reports:         https://github.com/yusent/yesod-auth-bcryptdb/issues
license:             MIT
license-file:        LICENSE
author:              Yusent Chig
maintainer:          Yusent Chig <yusent@protonmail.com>
copyright:           2017 Yusent Chig
category:            Web, Yesod
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  build-depends:       aeson
                     , base >= 4 && < 5
                     , bytestring >= 0.9.1.4
                     , cryptonite >= 0.29 && < 0.30
                     , persistent >= 2.13 && < 2.18
                     , text >= 0.7
                     , yesod-auth >= 1.6.11 && < 1.7
                     , yesod-core >= 1.6 && < 1.7
                     , yesod-form >= 1.7 && < 1.8
                     , yesod-persistent >= 1.2
  default-language:    Haskell2010
  exposed-modules:     Yesod.Auth.BCryptDB
  ghc-options:         -Wall
  hs-source-dirs:      src

source-repository head
  type:     git
  location: https://github.com/yusent/yesod-auth-bcryptdb
